Fix alignments and limit size of the dive-in logo on the upper left corner

--- a/public/css/event.css
+++ b/public/css/event.css
@@ -31,7 +31,6 @@
 }
 
 .di-pad {
-  padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 0px;
   padding-right: 0px;
